--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Long Range</string>
+    <string name="app_name">Long Range Wi-Fi Installation</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
